@startuml Shared.WebApi classes
hide empty members

interface IExceptionFilter << ASP.NET Core >>
{
    +void OnException(ExceptionContext)
}
interface ILogger << Serilog >>

exception PostgresException << EF Core >>

abstract class BaseExceptionFilter
{
    {abstract}#bool IsSupportedException(Exception)
    #HttpStatusCode GetStatusCode(Exception)
    #string GetMessage(Exception)
}
IExceptionFilter <|.. BaseExceptionFilter
BaseExceptionFilter --> ILogger

class UnhandledExceptionFilter
BaseExceptionFilter <|-- UnhandledExceptionFilter

class PostgresExceptionsFilter
BaseExceptionFilter <|-- PostgresExceptionsFilter
PostgresExceptionsFilter --> PostgresException

@enduml
